--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
